<resources>
    <string name="app_name">QuizDroid</string>
    <string name="choose_a_topic">Choose a topic:</string>
    <string name="quiz_topic">Quiz Topic</string>
    <string name="questions">5 Questions</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="topic">Topic</string>
    <string name="begin">Begin</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="question">Question</string>
    <string name="submit">Submit</string>
    <string name="you_answered">You Answered:</string>
    <string name="answer">Answer</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="correct_answer_option">Option 1</string>
    <string name="quiz_score">You have %1$d out of 5 correct!</string>
    <string name="you_have_x_out_of_x_correct">You have %1$d out of 5 correct!</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="short_description">Short Description</string>
    <string name="userAnswer" />
    <string name="preferences">Preferences</string>
    <string name="minutes_between_messages">Minutes Between Messages:</string>
    <string name="start">Start</string>
    <string name="message">Message:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="update_preferences">Update Preferences</string>
    <string name="data_url">Data URL:</string>
    <string name="check_for_new_downloads_every">Check for new downloads every:</string>
    <string name="minutes">minutes</string>
    <string name="insert_data_url_here">Insert Data URL here</string>
    <string name="insert_minutes">Insert minutes</string>
</resources>