<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preferences">

    <TextView
        android:id="@+id/preferencesTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/URLTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/preferencesTextEdit"
        app:layout_constraintTop_toBottomOf="@id/preferencesTextEdit"
        app:layout_constraintBaseline_toBaselineOf="@id/URLEditText"/>

    <EditText
        android:id="@+id/URLEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Insert Data URL here"
        android:ems="10"
        android:hint="@string/insert_data_url_here"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/URLTextEdit"
        app:layout_constraintTop_toBottomOf="@id/preferencesTextEdit" />

    <TextView
        android:id="@+id/CheckDLTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_for_new_downloads_every"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/URLEditText"
        app:layout_constraintStart_toStartOf="@id/URLTextEdit"
        app:layout_constraintBaseline_toBaselineOf="@id/minuteEditText"/>

    <EditText
        android:id="@+id/minuteEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Interval minutes"
        android:ems="5"
        android:hint="@string/insert_minutes"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toStartOf="@id/minutesTextView"
        app:layout_constraintStart_toEndOf="@id/CheckDLTextView"
        app:layout_constraintTop_toBottomOf="@id/URLEditText" />

    <TextView
        android:id="@+id/minutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        app:layout_constraintStart_toEndOf="@id/minuteEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/minuteEditText"/>

    <Button
        android:id="@+id/updateBtnPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/update_preferences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minuteEditText" />



</androidx.constraintlayout.widget.ConstraintLayout>